Algset view : pseudo-fix spacing for alg names

--- a/styles/card.css
+++ b/styles/card.css
@@ -74,6 +74,10 @@ ul.algCardList {
 	list-style: none;
 }
 
+h3.algCard__title {
+	align-self: end;
+}
+
 p.algCard__content {
 	font-size: 0.85rem;
 	letter-spacing: 0.3px;
